Fixed overflow page on landing route

--- a/1_wfa/client/src/app/components/landing/landing.component.scss
+++ b/1_wfa/client/src/app/components/landing/landing.component.scss
@@ -2,13 +2,13 @@
 
 .wrapper {
     position: absolute;
-    width: 100vw;
+    width: 98vw;
 }
 
 .header {
     position: absolute;
     top: 10%;
-    width: 100%;
+    width: 80%;
     text-align: center;
     font-weight: 100;
     font-size: 175%;
